<resources>
    <string name="app_name">Age in Minutes Calculator</string>
    <string name="calculate_your">Calculate your</string>
    <string name="age">age</string>
    <string name="in_minutes">in minutes</string>
    <string name="select_date">Select date</string>
    <string name="since">Since</string>
    <string name="have_passed">have passed</string>
    <string name="age_in_seconds">seconds or</string>
    <string name="age_in_minutes">minutes or</string>
    <string name="age_in_days">days</string>
</resources>